--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
                         <h1 class="brand-heading">Ryan Scherer</h1>
-                        <p class="intro-text">A software developer, music fan, lover of america's past time.<br>Inspired by 'Cuse.</p>
+                        <p class="intro-text">Software developer, music lover, fan of america's past time.<br>Inspired by 'Cuse.</p>
                         <a href="#about" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
                         </a>
@@ -94,7 +94,7 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>About Ryan</h2>
-                <p>Grayscale is a free Bootstrap 3 theme created by Start Bootstrap. It can be yours right now, simply download the template on <a href="http://startbootstrap.com/template-overviews/grayscale/">the preview page</a>. The theme is open source, and you can use it for any purpose, personal or commercial.</p>
+                <p>I am a graduate of the <a href="https://ischool.syr.edu">iSchool</a> at Syracuse University. The theme is open source, and you can use it for any purpose, personal or commercial.</p>
                 <p>This theme features stock photos by <a href="http://gratisography.com/">Gratisography</a> along with a custom Google Maps skin courtesy of <a href="http://snazzymaps.com/">Snazzy Maps</a>.</p>
                 <p>Grayscale includes full HTML, CSS, and custom JavaScript files along with LESS files for easy customization.</p>
             </div>
@@ -106,8 +106,9 @@
         <div class="download-section">
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
-                    <h2>Download Grayscale</h2>
-                    <p>You can download Grayscale for free on the preview page at Start Bootstrap.</p>
+                    <!--CSS-->
+                    <h2><span style="color: #fff; background-color: rgba(255,153,0,.5); padding: 0 8px 0 8px;">View My Work</span></h2>
+                    <p><span style="color: #fff; background-color: rgba(255,153,0,.5); padding: 0 8px 0 8px;">You can download Grayscale for free on the preview page at Start Bootstrap.</span></p>
                     <a href="http://startbootstrap.com/template-overviews/grayscale/" class="btn btn-default btn-lg">Visit Download Page</a>
                 </div>
             </div>
