--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
-                        <h1 class="brand-heading">Ryan Scherer</h1>
-                        <p class="intro-text">Software developer, music lover, fan of america's greatest past time.<br>Inspired by 'Cuse.</p>
+                        <h1 class="brand-heading">Hi, I'm Ryan.</h1>
+                        <p class="intro-text"><span style="color: #fff; background-color: rgba(255,153,0,.5); padding: 0 8px 0 8px;">Software developer, music lover, and fan of america's greatest past time.<br>Inspired by 'Cuse.</p></span>
                         <a href="#about" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
                         </a>
@@ -119,9 +119,9 @@
     <section id="contact" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-                <h2>Contact Start Bootstrap</h2>
-                <p>Feel free to email us to provide some feedback on our templates, give us suggestions for new templates and themes, or to just say hello!</p>
-                <p><a href="mailto:feedback@startbootstrap.com">feedback@startbootstrap.com</a>
+                <h2>Contact Ryan</h2>
+                <p>Feel free to email me to provide some feedback, give us suggestions, or to just say hi!</p>
+                <p><a href="mailto:rtscherer@gmail.com">rtscherer@gmail.com</a>
                 </p>
                 <ul class="list-inline banner-social-buttons">
                     <li>
@@ -131,7 +131,7 @@
                         <a href="https://www.instagram.com/rtscherer" class="btn btn-default btn-lg"><i class="fa fa-instagram fa-fw"></i> <span class="network-name">Instagram</span></a>
                     </li>
                     <li>
-                        <a href="https://plus.google.com/+Startbootstrap/posts" class="btn btn-default btn-lg"><i class="fa fa-spotify fa-fw"></i> <span class="network-name">Spotify</span></a>
+                        <a href="http://www.spotify.com" class="btn btn-default btn-lg"><i class="fa fa-spotify fa-fw"></i> <span class="network-name">Spotify</span></a>
                     </li>
                     <li>
                         <a href="https://github.com/rtscherer" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
@@ -140,9 +140,6 @@
             </div>
         </div>
     </section>
-
-    <!-- Map Section -->
-    <div id="map"></div>
 
     <!-- Footer -->
     <footer>
